Fix filling viewport height on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,5 @@
-body {
-  position: relative;
-  min-height: 100vh;
+html {
+  height: 100%;
 }
 
 nav img {
